--- a/.github/actions/build-push-image/action.yml
+++ b/.github/actions/build-push-image/action.yml
@@ -36,7 +36,7 @@ runs:
       shell: bash
       env:
         ZOMBIENET_IMAGE: "docker.io/paritytech/zombienet:v1.3.105"
-        IMAGE_TAG: europe-docker.pkg.dev/parity-ci-2024/temp-images/${{ inputs.image-name }}:$DOCKER_IMAGES_VERSION
+        IMAGE_TAG: europe-docker.pkg.dev/parity-ci-2024/temp-images/${{ inputs.image-name }}
       run: |
         export DOCKER_IMAGES_VERSION=${{ github.event.pull_request.head.sha }}
         if [[ ${{ github.event_name }} == "merge_group" ]]; then export DOCKER_IMAGES_VERSION="${GITHUB_SHA::8}"; fi
@@ -45,10 +45,10 @@ runs:
           --build-arg BUILD_DATE="$(date -u '+%Y-%m-%dT%H:%M:%SZ')" \
           --build-arg IMAGE_NAME="${{ inputs.image-name }}" \
           --build-arg ZOMBIENET_IMAGE="${ZOMBIENET_IMAGE}" \
-          -t "${{ env.IMAGE_TAG }}" \
+          -t "${{ env.IMAGE_TAG }}:$DOCKER_IMAGES_VERSION" \
           -f ${{ inputs.dockerfile }} \
           .
-        docker push "${{ inputs.image-name }}:$DOCKER_IMAGES_VERSION"
+        docker push "${{ env.IMAGE_TAG }}:$DOCKER_IMAGES_VERSION"
 
     - name: login to dockerhub
       if: ${{ inputs.pushToDockerhub }}
@@ -61,8 +61,10 @@ runs:
       shell: bash
       if: ${{ inputs.pushToDockerhub }}
       run: |
-        export DOCKERHUB_TAG=docker.io/paritypr/${{ inputs.image-name }}:${{ github.event.pull_request.head.sha }}
-        docker tag ${{ env.IMAGE_TAG }} $DOCKERHUB_TAG
+        export DOCKER_IMAGES_VERSION=${{ github.event.pull_request.head.sha }}
+        if [[ ${{ github.event_name }} == "merge_group" ]]; then export DOCKER_IMAGES_VERSION="${GITHUB_SHA::8}"; fi
+        export DOCKERHUB_TAG=docker.io/paritypr/${{ inputs.image-name }}:$DOCKER_IMAGES_VERSION
+        docker tag "europe-docker.pkg.dev/parity-ci-2024/temp-images/${{ inputs.image-name }}:$DOCKER_IMAGES_VERSION" $DOCKERHUB_TAG
         docker push $DOCKERHUB_TAG
 
 
