Move the test in staking-async

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -555,7 +555,7 @@ members = [
 	"substrate/utils/prometheus",
 	"substrate/utils/substrate-bip39",
 	"substrate/utils/wasm-builder",
-	"substrate/zombienet-sdk",
+	"substrate/frame/staking-async/zombienet-sdk",
 	"templates/minimal/node",
 	"templates/minimal/pallets/template",
 	"templates/minimal/runtime",
