--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1425,7 +1425,7 @@ twox-hash = { version = "1.6.3", default-features = false }
 txtesttool = { version = "0.4.0", package = "substrate-txtesttool" }
 unsigned-varint = { version = "0.7.2" }
 url = { version = "2.5.4" }
-verifiable = { git = "https://github.com/paritytech/verifiable", branch = "main", version = "*", default-features = false }
+verifiable = { version = "0.1", default-features = false }
 void = { version = "1.0.2" }
 w3f-bls = { version = "0.1.3", default-features = false }
 wait-timeout = { version = "0.2" }
