Address PR comments

--- a/.github/workflows/check-prdoc.yml
+++ b/.github/workflows/check-prdoc.yml
@@ -53,9 +53,13 @@ jobs:
           original_pr_number=''
           PR_TITLE="${{ github.event.pull_request.title }}"
           if [[ $PR_TITLE =~ 'Backport' ]]; then
+            # Extracting the original PR number from the backport's PR title
             if [[ $PR_TITLE =~ \#([0-9]+) ]]; then
               original_pr_number="${BASH_REMATCH[1]}"
               echo "Extracted PR number: $original_pr_number"
+            else
+              echo "⚠️ The PR title dose not contain original PR number. PR titel should be in form: [stableBranchName] Backport #originalPRNumber"
+              exit 1
             fi
           else
             original_pr_number=${{ github.event.pull_request.number }}
