--- a/.github/workflows/zombienet-reusable-preflight.yml
+++ b/.github/workflows/zombienet-reusable-preflight.yml
@@ -47,6 +47,11 @@ on:
         value: ${{ jobs.preflight.outputs.ZOMBIENET_IMAGE }}
         description: "ZOMBIENET CI image"
 
+      CI_IMAGE:
+        value: ${{ jobs.preflight.outputs.CI_IMAGE }}
+        description: "CI image"
+
+
       ZOMBIENET_RUNNER:
         value: ${{ jobs.preflight.outputs.ZOMBIENET_RUNNER }}
         description: |
@@ -118,6 +123,8 @@ jobs:
       changes_bridges: true
       changes_templates: true
 
+      CI_IMAGE: ${{ steps.set_vars.outputs.IMAGE }}
+
       ZOMBIENET_IMAGE: ${{ steps.set_vars.outputs.ZOMBIENET_IMAGE }}
       ZOMBIENET_RUNNER: ${{ steps.set_vars.outputs.ZOMBIENET_RUNNER }}
 
@@ -183,6 +190,9 @@ jobs:
           #
           cat .github/zombienet-env >> $GITHUB_OUTPUT
           cat .github/zombienet-env
+          # global imga from ci
+          cat .github/env >> $GITHUB_OUTPUT
+          cat .github/env
 
       #
       #
@@ -200,6 +210,7 @@ jobs:
         run: |
           echo "workflow file: ${{ steps.current_file.outputs.currentWorkflowFile }}"
           echo "ZOMBIENET_IMAGE: ${{ steps.set_vars.outputs.ZOMBIENET_IMAGE }}"
+          echo "CI_IMAGE: ${{ steps.set_vars.outputs.IMAGE }}"
 
   #
   #
@@ -210,7 +221,9 @@ jobs:
     steps:
       - name: Info vars
         run: |
+          echo "CI_IMAGE: ${{ needs.preflight.outputs.CI_IMAGE }}"
           echo "ZOMBIENET_IMAGE: ${{ needs.preflight.outputs.ZOMBIENET_IMAGE }}"
+          echo "CI_IMAGE: ${{ needs.preflight.outputs.CI_IMAGE }}"
           echo "ZOMBIENET_RUNNER: ${{ needs.preflight.outputs.ZOMBIENET_RUNNER }}"
           echo "DOCKER_IMAGES_VERSION: ${{ needs.preflight.outputs.DOCKER_IMAGES_VERSION }}"
           echo "SOURCE_REF_SLUG: ${{ needs.preflight.outputs.SOURCE_REF_SLUG }}"
