fix feature propagation

--- a/substrate/frame/staking-async/Cargo.toml
+++ b/substrate/frame/staking-async/Cargo.toml
@@ -54,6 +54,7 @@ zombienet-sdk = { workspace = true }
 [features]
 default = ["std"]
 std = [
+	"anyhow/std",
 	"codec/std",
 	"frame-benchmarking?/std",
 	"frame-election-provider-support/std",
