--- a/cumulus/test/runtime/Cargo.toml
+++ b/cumulus/test/runtime/Cargo.toml
@@ -103,3 +103,5 @@ elastic-scaling-multi-block-slot = []
 experimental-ump-signals = [
 	"cumulus-pallet-parachain-system/experimental-ump-signals",
 ]
+# A runtime with 12s slot duration which only authors one block per slot.
+sync-backing = []
