cargo: Add prometheus endpoint to the RPC layers
Signed-off-by: Alexandru Vasile <alexandru.vasile@parity.io>

--- a/substrate/client/rpc-spec-v2/Cargo.toml
+++ b/substrate/client/rpc-spec-v2/Cargo.toml
@@ -43,6 +43,7 @@ sp-version = { workspace = true, default-features = true }
 thiserror = { workspace = true }
 tokio = { features = ["sync"], workspace = true, default-features = true }
 tokio-stream = { features = ["sync"], workspace = true }
+prometheus-endpoint = { workspace = true, default-features = true }
 
 [dev-dependencies]
 assert_matches = { workspace = true }
