--- a/.github/actions/build-push-image/action.yml
+++ b/.github/actions/build-push-image/action.yml
@@ -52,7 +52,7 @@ runs:
     - name: login to dockerhub
       id: login
       # fork check
-      if: ${{ inputs.username != '' && inputs.password != '' }}
+      if: ${{ inputs.username != '' && inputs.password != '' && github.event_name != "merge_group" }}
       uses: docker/login-action@v3
       with:
         username: ${{ inputs.username }}
@@ -63,8 +63,7 @@ runs:
       needs: [login]
       run: |
         export DOCKER_IMAGES_VERSION=${{ github.event.pull_request.head.sha }}
-        if [[ ${{ github.event_name }} == "merge_group" ]]; then export DOCKER_IMAGES_VERSION="${GITHUB_SHA::8}"; fi
-        export DOCKERHUB_TAG=docker.io/paritypr/${{ inputs.image-name }}:${{ github.event.pull_request.number }}-${GITHUB_SHA::8}
+        export DOCKERHUB_TAG=docker.io/paritypr/${{ inputs.image-name }}:${{ github.event.pull_request.number || 'master' }}-${GITHUB_SHA::8}
         docker tag "europe-docker.pkg.dev/parity-ci-2024/temp-images/${{ inputs.image-name }}:$DOCKER_IMAGES_VERSION" $DOCKERHUB_TAG
         docker push $DOCKERHUB_TAG
 
