--- a/.github/actions/build-push-image/action.yml
+++ b/.github/actions/build-push-image/action.yml
@@ -60,7 +60,7 @@ runs:
 
     - name: push to dockerhub
       shell: bash
-      needs: [login]
+      if: ${{ inputs.username != '' && inputs.password != '' && github.event_name != 'merge_group' }}
       run: |
         export DOCKER_IMAGES_VERSION=${{ github.event.pull_request.head.sha }}
         export DOCKERHUB_TAG=docker.io/paritypr/${{ inputs.image-name }}:${{ github.event.pull_request.number || 'master' }}-${GITHUB_SHA::8}
