--- a/bridges/modules/relayers/Cargo.toml
+++ b/bridges/modules/relayers/Cargo.toml
@@ -60,6 +60,12 @@ std = [
 	"sp-arithmetic/std",
 	"sp-runtime/std",
 	"sp-std/std",
+	"bp-parachains/std",
+	"bp-polkadot-core/std",
+	"bp-test-utils/std",
+	"pallet-utility/std",
+	"sp-core/std",
+	"sp-io/std"
 ]
 runtime-benchmarks = [
 	"frame-benchmarking/runtime-benchmarks",
@@ -69,6 +75,8 @@ runtime-benchmarks = [
 	"pallet-bridge-messages/runtime-benchmarks",
 	"pallet-bridge-parachains/runtime-benchmarks",
 	"sp-runtime/runtime-benchmarks",
+	"pallet-balances/runtime-benchmarks",
+	"pallet-utility/runtime-benchmarks"
 ]
 try-runtime = [
 	"frame-support/try-runtime",
@@ -78,5 +86,7 @@ try-runtime = [
 	"pallet-bridge-parachains/try-runtime",
 	"pallet-transaction-payment/try-runtime",
 	"sp-runtime/try-runtime",
+	"pallet-balances/try-runtime",
+	"pallet-utility/try-runtime"
 ]
 integrity-test = []
