--- a/substrate/bin/node/cli/Cargo.toml
+++ b/substrate/bin/node/cli/Cargo.toml
@@ -97,6 +97,7 @@ runtime-benchmarks = [
 try-runtime = [
 	"kitchensink-runtime/try-runtime",
 	"polkadot-sdk/try-runtime",
+	"substrate-cli-test-utils/try-runtime"
 ]
 riscv = [
 	"kitchensink-runtime/riscv",
