--- a/substrate/frame/Cargo.toml
+++ b/substrate/frame/Cargo.toml
@@ -109,4 +109,5 @@ try-runtime = [
 	"frame-system/try-runtime",
 	"frame-try-runtime/try-runtime",
 	"sp-runtime/try-runtime",
+	"pallet-examples/try-runtime"
 ]
