--- a/substrate/frame/transaction-payment/asset-conversion-tx-payment/Cargo.toml
+++ b/substrate/frame/transaction-payment/asset-conversion-tx-payment/Cargo.toml
@@ -41,6 +41,9 @@ std = [
 	"pallet-transaction-payment/std",
 	"scale-info/std",
 	"sp-runtime/std",
+	"sp-core/std",
+	"sp-io/std",
+	"sp-storage/std"
 ]
 try-runtime = [
 	"frame-support/try-runtime",
@@ -48,4 +51,6 @@ try-runtime = [
 	"pallet-asset-conversion/try-runtime",
 	"pallet-transaction-payment/try-runtime",
 	"sp-runtime/try-runtime",
+	"pallet-assets/try-runtime",
+	"pallet-balances/try-runtime"
 ]
