--- a/cumulus/parachains/integration-tests/emulated/tests/assets/asset-hub-westend/Cargo.toml
+++ b/cumulus/parachains/integration-tests/emulated/tests/assets/asset-hub-westend/Cargo.toml
@@ -39,7 +39,11 @@ cumulus-pallet-parachain-system = { workspace = true }
 cumulus-pallet-xcmp-queue = { workspace = true }
 emulated-integration-tests-common = { workspace = true }
 parachains-common = { workspace = true, default-features = true }
+rococo-system-emulated-network = { workspace = true }
 westend-system-emulated-network = { workspace = true }
+
+# Bridge
+pallet-xcm-bridge = { workspace = true }
 
 [dev-dependencies]
 sp-tracing = { features = ["test-utils"], workspace = true, default-features = true }
