--- a/.github/actions/build-push-image/action.yml
+++ b/.github/actions/build-push-image/action.yml
@@ -4,8 +4,14 @@ inputs:
     description: "dockerfile to build"
     required: true
   image-name:
-    description: ""
+    description: "image name (without registry)"
     required: true
+  username:
+    required: false
+    default: ""
+  password:
+    required: false
+    default: ""
 outputs:
   branch:
     description: "Branch name for the PR"
@@ -29,6 +35,7 @@ runs:
       shell: bash
       env:
         ZOMBIENET_IMAGE: "docker.io/paritytech/zombienet:v1.3.105"
+        IMAGE_TAG: europe-docker.pkg.dev/parity-ci-2024/temp-images/${{ inputs.image-name }}
       run: |
         export DOCKER_IMAGES_VERSION=${{ github.event.pull_request.head.sha }}
         if [[ ${{ github.event_name }} == "merge_group" ]]; then export DOCKER_IMAGES_VERSION="${GITHUB_SHA::8}"; fi
@@ -37,7 +44,27 @@ runs:
           --build-arg BUILD_DATE="$(date -u '+%Y-%m-%dT%H:%M:%SZ')" \
           --build-arg IMAGE_NAME="${{ inputs.image-name }}" \
           --build-arg ZOMBIENET_IMAGE="${ZOMBIENET_IMAGE}" \
-          -t "${{ inputs.image-name }}:$DOCKER_IMAGES_VERSION" \
+          -t "${{ env.IMAGE_TAG }}:$DOCKER_IMAGES_VERSION" \
           -f ${{ inputs.dockerfile }} \
           .
-        docker push "${{ inputs.image-name }}:$DOCKER_IMAGES_VERSION"
+        docker push "${{ env.IMAGE_TAG }}:$DOCKER_IMAGES_VERSION"
+
+    - name: login to dockerhub
+      id: login
+      # fork check
+      if: ${{ inputs.username != '' && inputs.password != '' && github.event_name != 'merge_group' }}
+      uses: docker/login-action@v3
+      with:
+        username: ${{ inputs.username }}
+        password: ${{ inputs.password }}
+
+    - name: push to dockerhub
+      shell: bash
+      if: ${{ inputs.username != '' && inputs.password != '' && github.event_name != 'merge_group' }}
+      run: |
+        export DOCKER_IMAGES_VERSION=${{ github.event.pull_request.head.sha }}
+        export DOCKERHUB_TAG=docker.io/paritypr/${{ inputs.image-name }}:${{ github.event.pull_request.number || 'master' }}-${GITHUB_SHA::8}
+        docker tag "europe-docker.pkg.dev/parity-ci-2024/temp-images/${{ inputs.image-name }}:$DOCKER_IMAGES_VERSION" $DOCKERHUB_TAG
+        docker push $DOCKERHUB_TAG
+
+
