zombienet-cumulus-tests: set RUN_IN_CI for GH workflow

--- a/.github/workflows/zombienet_cumulus.yml
+++ b/.github/workflows/zombienet_cumulus.yml
@@ -38,6 +38,7 @@ jobs:
       CUMULUS_IMAGE: "${{ needs.preflight.outputs.TEMP_IMAGES_BASE }}/test-parachain:${{ needs.preflight.outputs.DOCKER_IMAGES_VERSION }}"
       RUST_LOG: ${{ needs.preflight.outputs.RUST_LOG }}
       ZOMBIE_PROVIDER: ${{ needs.preflight.outputs.ZOMBIE_PROVIDER }}
+      RUN_IN_CI: ${{ needs.preflight.outputs.RUN_IN_CI }}
       # don't retry sdk tests
       NEXTEST_RETRIES: 0
 
@@ -354,6 +355,7 @@ jobs:
       CUMULUS_IMAGE: "${{ needs.preflight.outputs.TEMP_IMAGES_BASE }}/test-parachain:${{ needs.preflight.outputs.DOCKER_IMAGES_VERSION }}"
       RUST_LOG: ${{ needs.preflight.outputs.RUST_LOG }}
       ZOMBIE_PROVIDER: ${{ needs.preflight.outputs.ZOMBIE_PROVIDER }}
+      RUN_IN_CI: ${{ needs.preflight.outputs.RUN_IN_CI }}
       # don't retry sdk tests
       NEXTEST_RETRIES: 0
 
