--- a/cumulus/parachains/runtimes/testing/yet-another-parachain/Cargo.toml
+++ b/cumulus/parachains/runtimes/testing/yet-another-parachain/Cargo.toml
@@ -47,9 +47,9 @@ sp-runtime = { workspace = true }
 sp-session = { workspace = true }
 sp-transaction-pool = { workspace = true }
 sp-version = { workspace = true }
-xcm.workspace = true
 xcm-builder.workspace = true
 xcm-executor.workspace = true
+xcm.workspace = true
 
 # Polkadot
 polkadot-parachain-primitives = { workspace = true }
@@ -57,7 +57,9 @@ polkadot-runtime-common = { workspace = true }
 
 # Cumulus
 cumulus-pallet-aura-ext = { workspace = true }
-cumulus-pallet-parachain-system = { workspace = true, features = ["experimental-ump-signals"] }
+cumulus-pallet-parachain-system = { workspace = true, features = [
+	"experimental-ump-signals",
+] }
 cumulus-pallet-weight-reclaim = { workspace = true }
 cumulus-primitives-aura = { workspace = true }
 cumulus-primitives-core = { workspace = true }
