--- a/.github/workflows/zombienet_cumulus.yml
+++ b/.github/workflows/zombienet_cumulus.yml
@@ -36,7 +36,8 @@ jobs:
       # sdk tests are looking for POLKADOT_IMAGE
       POLKADOT_IMAGE: "${{ needs.preflight.outputs.TEMP_IMAGES_BASE }}/polkadot-debug:${{ needs.preflight.outputs.DOCKER_IMAGES_VERSION }}"
       CUMULUS_IMAGE: "${{ needs.preflight.outputs.TEMP_IMAGES_BASE }}/test-parachain:${{ needs.preflight.outputs.DOCKER_IMAGES_VERSION }}"
-      RUST_LOG: ${{ needs.preflight.outputs.RUST_LOG }}
+      # RUST_LOG: ${{ needs.preflight.outputs.RUST_LOG }}
+      RUST_LOG: debug
       ZOMBIE_PROVIDER: ${{ needs.preflight.outputs.ZOMBIE_PROVIDER }}
       RUN_IN_CI: ${{ needs.preflight.outputs.RUN_IN_CI }}
       # don't retry sdk tests
@@ -353,7 +354,8 @@ jobs:
       # sdk tests are looking for POLKADOT_IMAGE
       POLKADOT_IMAGE: "${{ needs.preflight.outputs.TEMP_IMAGES_BASE }}/polkadot-debug:${{ needs.preflight.outputs.DOCKER_IMAGES_VERSION }}"
       CUMULUS_IMAGE: "${{ needs.preflight.outputs.TEMP_IMAGES_BASE }}/test-parachain:${{ needs.preflight.outputs.DOCKER_IMAGES_VERSION }}"
-      RUST_LOG: ${{ needs.preflight.outputs.RUST_LOG }}
+      # RUST_LOG: ${{ needs.preflight.outputs.RUST_LOG }}
+      RUST_LOG: debug
       ZOMBIE_PROVIDER: ${{ needs.preflight.outputs.ZOMBIE_PROVIDER }}
       RUN_IN_CI: ${{ needs.preflight.outputs.RUN_IN_CI }}
       # don't retry sdk tests
