--- a/cumulus/client/service/Cargo.toml
+++ b/cumulus/client/service/Cargo.toml
@@ -13,6 +13,7 @@ workspace = true
 
 [dependencies]
 futures = { workspace = true }
+prometheus = { workspace = true }
 
 # Substrate
 sc-client-api = { workspace = true, default-features = true }
