--- a/substrate/frame/nomination-pools/test-delegate-stake/Cargo.toml
+++ b/substrate/frame/nomination-pools/test-delegate-stake/Cargo.toml
@@ -25,15 +25,9 @@ sp-std = { default-features = true, path = "../../../primitives/std" }
 sp-staking = { default-features = true, path = "../../../primitives/staking" }
 sp-core = { default-features = true, path = "../../../primitives/core" }
 
-<<<<<<< HEAD
 frame-system = { default-features = true, path = "../../system" }
-frame-support = { default-features = true, path = "../../support" }
+frame-support = { features = ["experimental"], default-features = true, path = "../../support" }
 frame-election-provider-support = { default-features = true, path = "../../election-provider-support" }
-=======
-frame-system = { workspace = true, default-features = true }
-frame-support = { features = ["experimental"], workspace = true, default-features = true }
-frame-election-provider-support = { workspace = true, default-features = true }
->>>>>>> bf20a9ee ([Fix|NominationPools] Only allow apply slash to be executed if the slash amount is atleast ED (#6540))
 
 pallet-timestamp = { default-features = true, path = "../../timestamp" }
 pallet-balances = { default-features = true, path = "../../balances" }
