--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1372,6 +1372,7 @@ substrate-test-runtime-transaction-pool = { path = "substrate/test-utils/runtime
 substrate-test-utils = { path = "substrate/test-utils" }
 substrate-wasm-builder = { path = "substrate/utils/wasm-builder", default-features = false }
 subxt = { version = "0.38.1", default-features = false }
+subxt-macro = { version = "0.38.1", default-features = false }
 subxt-metadata = { version = "0.38.0", default-features = false }
 subxt-signer = { version = "0.38" }
 syn = { version = "2.0.87" }
