--- a/substrate/frame/revive/uapi/Cargo.toml
+++ b/substrate/frame/revive/uapi/Cargo.toml
@@ -20,6 +20,8 @@ bitflags = { workspace = true }
 codec = { features = ["derive", "max-encoded-len"], optional = true, workspace = true }
 pallet-revive-proc-macro = { workspace = true }
 scale-info = { features = ["derive"], optional = true, workspace = true }
+hex-literal = { version = "0.4.1", default-features = false }
+const-crypto = { version = "0.3.0", default-features = false}
 
 [target.'cfg(target_arch = "riscv64")'.dependencies]
 polkavm-derive = { version = "0.27.0" }
