--- a/polkadot/node/subsystem-util/Cargo.toml
+++ b/polkadot/node/subsystem-util/Cargo.toml
@@ -12,17 +12,22 @@ repository.workspace = true
 workspace = true
 
 [dependencies]
+# External dependencies
+bitvec = { workspace = true }
 codec = { features = ["derive"], workspace = true }
 fatality = { workspace = true }
 futures = { workspace = true }
 gum = { workspace = true, default-features = true }
 itertools = { workspace = true }
+kvdb = { workspace = true }
+metered = { features = ["futures_channel"], workspace = true }
+parity-db = { workspace = true }
 parking_lot = { workspace = true, default-features = true }
 rand = { workspace = true, default-features = true }
 schnellru = { workspace = true }
 thiserror = { workspace = true }
 
-metered = { features = ["futures_channel"], workspace = true }
+# Polkadot dependencies
 polkadot-erasure-coding = { workspace = true, default-features = true }
 polkadot-node-metrics = { workspace = true, default-features = true }
 polkadot-node-network-protocol = { workspace = true, default-features = true }
@@ -32,13 +37,10 @@ polkadot-node-subsystem-types = { workspace = true, default-features = true }
 polkadot-overseer = { workspace = true, default-features = true }
 polkadot-primitives = { workspace = true, default-features = true }
 
+# Substrate dependencies
 sp-application-crypto = { workspace = true, default-features = true }
 sp-core = { workspace = true, default-features = true }
 sp-keystore = { workspace = true, default-features = true }
-
-kvdb = { workspace = true }
-parity-db = { workspace = true }
-bitvec.workspace = true
 
 [dev-dependencies]
 assert_matches = { workspace = true }
