revive: Remove unnecesary types and imports
Signed-off-by: Alexandru Vasile <alexandru.vasile@parity.io>

--- a/substrate/frame/revive/Cargo.toml
+++ b/substrate/frame/revive/Cargo.toml
@@ -37,10 +37,9 @@ polkavm = { version = "0.27.0", default-features = false }
 polkavm-common = { version = "0.27.0", default-features = false, features = ["alloc"] }
 rand = { workspace = true, optional = true }
 rand_pcg = { workspace = true, optional = true }
-rlp = { workspace = true, features = ["derive"] }
+rlp = { workspace = true }
 scale-info = { features = ["derive"], workspace = true }
 serde = { features = ["alloc", "derive"], workspace = true, default-features = false }
-sp-trie = { workspace = true }
 
 # Polkadot SDK Dependencies
 bn = { workspace = true }
