--- a/substrate/frame/revive/fixtures/Cargo.toml
+++ b/substrate/frame/revive/fixtures/Cargo.toml
@@ -23,8 +23,8 @@ sp-io = { workspace = true, optional = true, default-features = true }
 [build-dependencies]
 anyhow = { workspace = true, default-features = true }
 cargo_metadata = { workspace = true }
-pallet-revive-uapi.workspace = true
-polkavm-linker = { version = "0.26.0" }
+pallet-revive-uapi = { workspace = true }
+polkavm-linker = { version = "0.27.0" }
 toml = { workspace = true }
 
 [features]
