--- a/.github/workflows/publish-check-compile.yml
+++ b/.github/workflows/publish-check-compile.yml
@@ -43,6 +43,7 @@ jobs:
       - name: Checkout to merge base with master
         run: |
           git fetch origin master
+          echo $GITHUB_REF_NAME
           commit=$(git merge-base origin/master $GITHUB_REF_NAME)
           git checkout $commit
 
