--- a/.github/workflows/publish-check-compile.yml
+++ b/.github/workflows/publish-check-compile.yml
@@ -42,9 +42,10 @@ jobs:
       
       - name: Checkout to merge base with master
         run: |
-          git fetch origin master
-          echo $GITHUB_REF_NAME
-          commit=$(git merge-base origin/master $GITHUB_REF_NAME)
+          git fetch ${{ github.base_ref}}
+          echo ${{ github.head_ref }}
+          echo ${{ github.base_ref }}
+          commit=$(git merge-base ${{ github.base_ref }} ${{ github.head_ref }})
           git checkout $commit
 
       - name: parity-publish update plan
