--- a/.github/workflows/publish-check-compile.yml
+++ b/.github/workflows/publish-check-compile.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Checkout to merge base with master
         run: |
           git fetch origin ${{ github.base_ref}}
-          commit=$(git merge-base ${{ github.base_ref }} ${{ github.head_ref }})
+          commit=$(git merge-base origin/${{ github.base_ref }} ${{ github.head_ref }})
           git checkout $commit
 
       - name: parity-publish update plan
