--- a/.github/workflows/publish-check-compile.yml
+++ b/.github/workflows/publish-check-compile.yml
@@ -44,6 +44,7 @@ jobs:
         run: |
           git fetch origin ${{ github.base_ref}}
           commit=$(git merge-base origin/${{ github.base_ref }} HEAD)
+          echo $commit
           git checkout $commit
 
       - name: parity-publish update plan
