assume last checkout breaks something
Signed-off-by: Iulian Barbu <iulian.barbu@parity.io>

--- a/.github/workflows/publish-check-compile.yml
+++ b/.github/workflows/publish-check-compile.yml
@@ -45,7 +45,7 @@ jobs:
           git fetch origin ${{ github.base_ref}}
           commit=$(git merge-base origin/${{ github.base_ref }} HEAD)
           echo $commit
-          git checkout $commit
+          #git checkout $commit
 
       - name: parity-publish update plan
         run: parity-publish --color always plan --skip-check --prdoc prdoc/
