--- a/Cargo.toml
+++ b/Cargo.toml
@@ -985,6 +985,7 @@ pallet-elections-phragmen = { path = "substrate/frame/elections-phragmen", defau
 pallet-example-authorization-tx-extension = { path = "substrate/frame/examples/authorization-tx-extension", default-features = false }
 pallet-example-basic = { path = "substrate/frame/examples/basic", default-features = false }
 pallet-example-frame-crate = { path = "substrate/frame/examples/frame-crate", default-features = false }
+pallet-example-hello-world = { path = "substrate/frame/examples/hello-world", default-features = false }
 pallet-example-kitchensink = { path = "substrate/frame/examples/kitchensink", default-features = false }
 pallet-example-mbm = { path = "substrate/frame/examples/multi-block-migrations", default-features = false }
 pallet-example-offchain-worker = { path = "substrate/frame/examples/offchain-worker", default-features = false }
