--- a/substrate/frame/nfts/Cargo.toml
+++ b/substrate/frame/nfts/Cargo.toml
@@ -26,6 +26,7 @@ scale-info = { features = ["derive"], workspace = true }
 sp-core = { workspace = true }
 sp-io = { workspace = true }
 sp-runtime = { workspace = true }
+derive-where = { workspace = true }
 
 [dev-dependencies]
 pallet-balances = { workspace = true, default-features = true }
